fixed padding spacing in css

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -286,6 +286,7 @@ img{
 }
 
 .main_container{
+    padding-top: 30px;
     padding-bottom: 30px;
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.8);
